# fire-control-data-science

./: CONTRIBUTING.md  README.md  config_path.py  pyproject.toml
api/: README.md  main.py
api/routers/: dados.py  metricas.py  modelos.py  predicao.py
api/services/: dados_service.py  metricas_service.py  modelos_service.py  predicao_service.py
dashboard/: README.md
data/: README.md
data_science/: config_path.py
data_science/scripts/: pre_processing.py  utils.py
features/: README.md
interactive_reports/: README.md
metrics/: README.md  metrics_reg_preditor_risco_fogo.joblib
models/: README.md
notebooks/: 1_pre_processamento.ipynb  2_eda.ipynb  3_feature_engineering.ipynb  4_ai.ipynb  README.md
reports/: README.md
scripts/: README.md  features.py  modeling.py  pre_processing.py  utils.py
